--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,13 @@
-# fly.toml app configuration file generated for bot-trading-binance on 2025-06-29T16:46:34Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'bot-trading-binance'
-primary_region = 'cdg'
+app = "bot-trading-binance"
+primary_region = "cdg"
 
 [build]
+  image = "python:3.10-slim"
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+[env]
+  PYTHONUNBUFFERED = "TRUE"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
+  memory = "1gb"
